--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ body {
     }
     .card {
         box-shadow: 0 4px 8px rgba(0, 0, 0, .25);
+        margin: 10px 10px 10px 10px;
         padding: 4px 4px 4px 4px;
         width: 30%;
     }
@@ -100,6 +101,7 @@ body {
     .cardContainer {
         display: inline-flex;
         justify-content: center;
+        padding-right: 20px;
     }
     /* Blog */
     .blogPostHeader {
